--- a/games/coba.html
+++ b/games/coba.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sinau Algo</title>
+  <title>Document</title>
 </head>
 
 <body>
-  <p>kanggo sinau algoritma pemrograman</p>
-  <ul><a href="games/coba.html"></a>klik disini</ul>
+  <p>ini games</p>
 </body>
 
 </html>
