--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <p>kanggo sinau algoritma pemrograman</p>
-  <ul><a href="games/coba.html"></a>klik disini</ul>
+  <ul></ul><a href="games/coba.html">klik disini</a></ul>
 </body>
 
 </html>
