--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
   <p>kanggo sinau algoritma pemrograman</p>
-  <ul></ul><a href="games/coba.html">klik disini</a></ul>
+  <a href="games/coba.html">klik disini</a>
+
 </body>
 
 </html>
